# tab-complete

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md
.github/workflows/: deploy-docs.yml  release.yml
docs/: architecture.md  f5-call-flow.md  server-reading-guide.md
docs-site/: changelog.md  index.md  package-lock.json  package.json
docs-site/.vitepress/: config.ts
docs-site/architecture/: overview.md
docs-site/guide/: configuration.md  getting-started.md  installation.md  usage.md
docs-site/providers/: claude.md  index.md  ollama.md  openai.md
lsp-server/src/: server.rs
lsp-server/src/ai/: mod.rs  openai.rs  retry.rs  streaming.rs
lsp-server/src/completion/: context.rs  handler.rs  mod.rs
lsp-server/src/config/: env.rs  mod.rs
scripts/: build.ps1  build.sh
server/: Cargo.toml
server/src/: main.rs  protocol.rs  server.rs
server/src/ai/: claude.rs  ollama.rs  openai.rs
server/src/app/: completion_service.rs  mod.rs  provider_factory.rs
server/src/cache/: lru.rs  mod.rs
server/src/completion/: filter.rs  language.rs  mod.rs  prompt.rs
server/src/config/: mod.rs
server/src/lsp/: backend.rs  documents.rs  edits.rs  mod.rs
vscode-extension/: .vscodeignore  ANNOTATION_SUMMARY.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
vscode-extension/dev-fixture/: sample.ts
vscode-extension/scripts/: build.mjs  run-integration-tests.mjs  watch.mjs
vscode-extension/src/: extension.ts
vscode-extension/src/app/: register-settings-change-sync.ts  registrations.ts  runtime.ts
vscode-extension/src/commands/: accept.ts  (+11 more)
(+49 files in other folders)
